// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConditionalFilter render should render correctly - isDisabled 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter desktop"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 1"
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 2"
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="checkbox"
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="radio filter"
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
              ouiaId="no value"
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        ouiaId="ConditionalFilter"
        toggle={
          <DropdownToggle
            className=""
            isDisabled={true}
            onToggle={[Function]}
            ouiaId="ConditionalFilter"
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              No value
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <div>
        <Text
          aria-label="text input"
          isDisabled={false}
          onSubmit={[Function]}
          placeholder="Filter by no value"
          value=""
        />
      </div>
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly 1`] = `
<Fragment>
  <div
    className="ins-c-conditional-filter desktop"
  >
    <Text
      aria-label="text input"
      id="default-input"
      isDisabled={false}
      onChange={[Function]}
      onSubmit={[Function]}
      useMobileLayout={true}
      value=""
      widget-type="InsightsInput"
    />
  </div>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly checkbox with value checkbox-filter 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter desktop"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 1"
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 2"
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
              ouiaId="checkbox"
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="radio filter"
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="no value"
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        ouiaId="ConditionalFilter"
        toggle={
          <DropdownToggle
            className=""
            isDisabled={false}
            onToggle={[Function]}
            ouiaId="ConditionalFilter"
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Checkbox
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <div>
        <CheckboxFilter
          id="checkbox-filter"
          isDisabled={false}
          items={
            Array [
              Object {
                "label": <div>
                  custom value
                </div>,
                "value": "some-value",
              },
              Object {
                "label": "another",
                "value": "another-value",
              },
              Object {
                "label": "no value",
              },
            ]
          }
          onChange={[Function]}
          placeholder="Filter by checkbox"
          value={Array []}
        />
      </div>
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly no value with value undefined 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter desktop"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
              ouiaId="simple text 1"
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 2"
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="checkbox"
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="radio filter"
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="no value"
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        ouiaId="ConditionalFilter"
        toggle={
          <DropdownToggle
            className=""
            isDisabled={false}
            onToggle={[Function]}
            ouiaId="ConditionalFilter"
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Simple text 1
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <div>
        <Text
          aria-label="text input"
          id=""
          isDisabled={false}
          onSubmit={[Function]}
          placeholder="Filter by simple text 1"
          value=""
        />
      </div>
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly radio filter with value radio-filter 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter desktop"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 1"
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 2"
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="checkbox"
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
              ouiaId="radio filter"
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="no value"
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        ouiaId="ConditionalFilter"
        toggle={
          <DropdownToggle
            className=""
            isDisabled={false}
            onToggle={[Function]}
            ouiaId="ConditionalFilter"
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Radio filter
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <div>
        <Radio
          id="radio-filter"
          isDisabled={false}
          items={
            Array [
              Object {
                "label": <div>
                  custom value
                </div>,
                "value": "some-value",
              },
              Object {
                "label": "another",
                "value": "another-value",
              },
            ]
          }
          onChange={[Function]}
          placeholder="Filter by radio filter"
        />
      </div>
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly simple text 1 with value simple-text-1 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter desktop"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
              ouiaId="simple text 1"
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 2"
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="checkbox"
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="radio filter"
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="no value"
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        ouiaId="ConditionalFilter"
        toggle={
          <DropdownToggle
            className=""
            isDisabled={false}
            onToggle={[Function]}
            ouiaId="ConditionalFilter"
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Simple text 1
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <div>
        <Text
          aria-label="text input"
          id="simple-text-1"
          isDisabled={false}
          onSubmit={[Function]}
          placeholder="Filter by simple text 1"
          value=""
        />
      </div>
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly simple text 2 with value simple-text-2 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter desktop"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 1"
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
              ouiaId="simple text 2"
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="checkbox"
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="radio filter"
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="no value"
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        ouiaId="ConditionalFilter"
        toggle={
          <DropdownToggle
            className=""
            isDisabled={false}
            onToggle={[Function]}
            ouiaId="ConditionalFilter"
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              Simple text 2
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <div>
        <Text
          aria-label="text input"
          id="simple-text-2"
          isDisabled={false}
          onSubmit={[Function]}
          placeholder="Filter by simple text 2"
          value="some-value blaa"
        />
      </div>
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly with config - each item as disabled 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter desktop"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 1"
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 2"
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="checkbox"
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="radio filter"
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
              ouiaId="no value"
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        ouiaId="ConditionalFilter"
        toggle={
          <DropdownToggle
            className=""
            isDisabled={false}
            onToggle={[Function]}
            ouiaId="ConditionalFilter"
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              No value
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <div>
        <Text
          aria-label="text input"
          isDisabled={true}
          onSubmit={[Function]}
          placeholder="Filter by no value"
          value=""
        />
      </div>
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly with config 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter desktop"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 1"
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 2"
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="checkbox"
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="radio filter"
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
              ouiaId="no value"
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        ouiaId="ConditionalFilter"
        toggle={
          <DropdownToggle
            className=""
            isDisabled={false}
            onToggle={[Function]}
            ouiaId="ConditionalFilter"
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
            <span
              className="ins-c-conditional-filter__value-selector"
            >
              No value
            </span>
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <div>
        <Text
          aria-label="text input"
          isDisabled={false}
          onSubmit={[Function]}
          placeholder="Filter by no value"
          value=""
        />
      </div>
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly with one filter 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter desktop"
  >
    <SplitItem
      isFilled={true}
    >
      <div>
        <Text
          aria-label="text input"
          isDisabled={false}
          onSubmit={[Function]}
          placeholder="Filter by simple text 1"
          value=""
        />
      </div>
    </SplitItem>
  </Split>
</Fragment>
`;

exports[`ConditionalFilter render should render correctly with with the active label hidden 1`] = `
<Fragment>
  <Split
    className="ins-c-conditional-filter desktop"
  >
    <SplitItem>
      <Dropdown
        className="ins-c-conditional-filter__group"
        dropdownItems={
          Array [
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 1"
            >
              Simple text 1
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="simple text 2"
            >
              Simple text 2
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="checkbox"
            >
              Checkbox
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={false}
              onClick={[Function]}
              ouiaId="radio filter"
            >
              Radio filter
            </DropdownItem>,
            <DropdownItem
              component="button"
              isHovered={true}
              onClick={[Function]}
              ouiaId="no value"
            >
              No value
            </DropdownItem>,
          ]
        }
        isOpen={false}
        onSelect={[Function]}
        ouiaId="ConditionalFilter"
        toggle={
          <DropdownToggle
            className="ins-c-conditional-filter__no-label"
            isDisabled={false}
            onToggle={[Function]}
            ouiaId="ConditionalFilter"
          >
            <FilterIcon
              color="currentColor"
              noVerticalAlign={false}
              size="sm"
            />
          </DropdownToggle>
        }
      />
    </SplitItem>
    <SplitItem
      isFilled={true}
    >
      <div>
        <Text
          aria-label="text input"
          isDisabled={false}
          onSubmit={[Function]}
          placeholder="Filter by no value"
          value=""
        />
      </div>
    </SplitItem>
  </Split>
</Fragment>
`;
